@@ -1,5 +1,6 @@
-package com.example.hw_27_hibernate_2.utilities;
+package com.example.hw_31_spring_security.utilities;
 
+import com.google.common.collect.Streams;
 import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
 import lombok.NonNull;
@@ -8,6 +9,7 @@ import org.modelmapper.convention.MatchingStrategies;
 
 import java.util.Collection;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @NoArgsConstructor(access = AccessLevel.PRIVATE)
 public final class Mapper {
@@ -26,7 +28,13 @@ public final class Mapper {
     public static <E, D> List<D> allToDto(@NonNull final Collection<E> entityCollection, Class<D> dtoClass) {
         return entityCollection.stream()
                 .map(e -> modelMapper.map(e, dtoClass))
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    public static <E, D> List<D> iterableToDto(@NonNull final Iterable<E> entityCollection, Class<D> dtoClass) {
+        return Streams.stream(entityCollection)
+                .map(e -> modelMapper.map(e, dtoClass))
+                .collect(Collectors.toList());
     }
 
     public static <E, D> E toEntity(@NonNull final D dto, Class<E> entityClass) {
@@ -36,6 +44,6 @@ public final class Mapper {
     public static <E, D> List<E> allToEntity(@NonNull final Collection<D> dtoCollection, Class<E> entityClass) {
         return dtoCollection.stream()
                 .map(d -> modelMapper.map(d, entityClass))
-                .toList();
+                .collect(Collectors.toList());
     }
 }
